feat : 베포테스트

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,7 +40,7 @@
   height: 38px;
   /* a 태그는 inline 이다. 그래서 너비, 높이 못줘요. */
   display: block;
-  background-image: url("http://localhost:3000/images/logo.svg");
+  background-image: url("../images/logo.svg");
 }
 
 .header-search {
@@ -78,7 +78,7 @@
   height: 45px;
   border: none;
   background-color: transparent;
-  background-image: url("http://localhost:3000/images/btn_search.svg");
+  background-image: url("../images/btn_search.svg");
   background-repeat: no-repeat;
   background-position: center;
   font-size: 0;
@@ -154,7 +154,7 @@ width, height, margin, padding이 원활하지 않앋.
   height: 15px;
   display: block;
   margin-left: 6px;
-  background: url("http://localhost:3000/images/badge_hot.svg") no-repeat center;
+  background: url("../images/badge_hot.svg") no-repeat center;
 }
 
 .header-cate li a img {
