--- a/src/styles/visual.css
+++ b/src/styles/visual.css
@@ -54,7 +54,7 @@
   height: 18px;
   display: block;
   margin: 0 auto;
-  background: url("http://localhost:3000/images/slider_arrow2.svg") no-repeat center;
+  background: url("../images/slider_arrow2.svg") no-repeat center;
   transform: rotateY(180deg);
 }
 
@@ -80,6 +80,6 @@
   height: 18px;
   display: block;
   margin: 0 auto;
-  background: url("http://localhost:3000/images/slider_arrow2.svg") no-repeat center;
+  background: url("../images/slider_arrow2.svg") no-repeat center;
   transform: ;
 }
